@startuml

title __VIEW's Class Diagram__\n


    namespace ub.edu {
      namespace view {
        abstract class ub.edu.view.Escena {
            # stage : Stage
            + setController()
            + setStage()
        }
      }
    }

  


    namespace ub.edu {
      namespace view {
        class ub.edu.view.EscenaActivitat {
            + activitat_text : Text
            + apuntarse_btn : Button
            + data_text : Text
            + pagar_btn : Button
            + valorar_btn : Button
            + setActivitat()
        }
      }
    }

    namespace ub.edu {
      namespace view {
        class ub.edu.view.EscenaActivitatsExcursio {
            + activitat_btn : Button
            + activitats_pane : AnchorPane
            + excursio_text : Text
            {static} - ESPAI_ENTRE_BOTONS : double
            + mostrarFinestraActivitat()
            + setExcursio()
            - createActivitatButton()
            - popularActivitats()
        }
      }
    }

    namespace ub.edu {
      namespace view {
        class ub.edu.view.EscenaExcursio {
            + activitats_btn : Button
            + data_text : Text
            + desti_btn : Button
            + excursio_text : Text
            + origen_btn : Button
            + mostrarFinestraLocalitzacio()
            + setExcursio()
            - mostrarFinestraActivitatsExcursio()
        }
      }
    }

    namespace ub.edu {
      namespace view {
        enum EscenaFactory {
          INSTANCE
        }
      }
    }

    namespace ub.edu {
      namespace view {
        class ub.edu.view.EscenaLocalitzacio {
            + especies_list : ListView
            + link_text : Hyperlink
            + ubicacio_text : Text
            + setLocalitzacio()
        }
      }
    }

    namespace ub.edu {
      namespace view {
        class ub.edu.view.EscenaLogin {
            + login_btn : Button
            + login_correu : TextField
            + login_pwd : PasswordField
            + registre_btn : Button
            + registre_correu : TextField
            + registre_pwd : PasswordField
            + onRegistreButtonClick()
            # onLoginButtonClick()
        }
      }
    }

    namespace ub.edu {
      namespace view {
        class ub.edu.view.EscenaMain {
            + activitatFetaColumn : TableColumn
            + activitatValColumn : TableColumn
            + excursioFetaColumn : TableColumn
            + excursioValColumn : TableColumn
            + excursio_btn : Button
            + excursions_pane : AnchorPane
            + tableTop10Fetes : TableView
            + tableTop10Valorades : TableView
            + valoracioValColumn : TableColumn
            + vegadesFetaColumn : TableColumn
            {static} - ESPAI_ENTRE_BOTONS : double
            + onOrdenarPerDataButtonClick()
            + onOrdenarPerNomButtonClick()
            + start()
            - buidarExcursions()
            - createExcursioButton()
            - mostrarFinestraActivitatsExcursio()
            - mostrarFinestraExcursio()
            - popularExcursions()
            - popularExcursionsPerData()
            - popularExcursionsPerNom()
            - popularTopActivitatsFetes()
            - popularTopActivitatsValorades()
        }
      }
    }

    namespace ub.edu {
      namespace view {
        class ub.edu.view.EscenaMain.ActivitatTop {
            - nomActivitat : SimpleStringProperty
            - nomExcursio : SimpleStringProperty
            - puntuacio : SimpleStringProperty
            + getNomActivitat()
            + getNomExcursio()
            + getPuntuacio()
            ~ ActivitatTop()
        }
      }
    }

    namespace ub.edu {
      namespace view {
        class ub.edu.view.Vista {
            + Vista()
        }
      }
    }

  

  ub.edu.view.Escena o-right- ub.edu.controller.Controller : controller
ub.edu.view.EscenaLocalitzacio -up-|> ub.edu.view.Escena
   ub.edu.view.EscenaLogin -up-|> ub.edu.view.Escena
   ub.edu.view.EscenaMain -up-|> ub.edu.view.Escena
   ub.edu.view.EscenaMain +-down- ub.edu.view.EscenaMain.ActivitatTop
   ub.edu.view.EscenaExcursio -up-|> ub.edu.view.Escena
  ub.edu.view.EscenaActivitat -up-|> ub.edu.view.Escena
   ub.edu.view.EscenaActivitatsExcursio -up-|> ub.edu.view.Escena
   ub.edu.view.Vista o-- ub.edu.controller.Controller : controller
ub.edu.view.EscenaFactory -right-> ub.edu.view.Escena: uses
ub.edu.view.Vista -down-> ub.edu.view.EscenaFactory : uses
ub.edu.view.Vista -down-> ub.edu.view.Escena : uses
right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
